--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -1,3 +1,32 @@
-body {
-    background-color: skyblue;
-}
+@import "tailwindcss";
+/* @plugin "daisyui"; */
+
+@theme {
+
+    --breakpoint-sm: 480px;
+    --breakpoint-md: 768px;
+    --breakpoint-lg: 976px;
+    --breakpoint-xl: 1280px;
+    --breakpoint-2xl: 1536px;
+    --breakpoint-3xl: 1920px;
+    --breakpoint-4xl: 2560px;
+    --breakpoint-5xl: 3840px;
+    --breakpoint-6xl: 5120px;  
+    --breakpoint-7xl: 7680px;
+    --breakpoint-8xl: 10240px;
+
+    
+    --color-facebook: #3b5998;
+    --color-instagram-style: #E1306C;
+    --color-linkedin: #0077B5;
+    --color-pinterest: #E60023;
+    --color-youtube: #FF0000;
+    --color-whatsapp: #25D366;
+    --color-snapchat: #FFFC00;
+    --color-tiktok: #69C9D0;
+    --color-reddit: #FF4500;
+    --color-twitter-blue: #1DA1F2
+
+  }
+
+
