--- a/templates/admin/index.html.twig
+++ b/templates/admin/index.html.twig
@@ -3,8 +3,66 @@
 {% block title %}Hello AdminController!{% endblock %}
 
 {% block body %}
-    <h1 class="text-3xl font-bold  text-instagram-style">
-        Hello AdminController!
-      Hello world!
-    </h1>
+<div class="navbar  shadow-sm bg-facebook">
+  <div class="flex-1">
+    <a class="btn btn-ghost text-xl text-instagram">daisyUI</a>
+  </div>
+  <div class="flex gap-2">
+    <input type="text" placeholder="Search" class="input input-bordered w-24 md:w-auto" />
+    <div class="dropdown dropdown-end">
+      <div tabindex="0" role="button" class="btn btn-ghost btn-circle avatar">
+        <div class="w-10 rounded-full">
+          <img
+            alt="Tailwind CSS Navbar component"
+            src="https://img.daisyui.com/images/stock/photo-1534528741775-53994a69daeb.webp" />
+        </div>
+      </div>
+      <ul
+        tabindex="0"
+        class="menu menu-sm dropdown-content bg-base-100 rounded-box z-1 mt-3 w-52 p-2 shadow">
+        <li>
+          <a class="justify-between">
+            Profile
+            <span class="badge">New</span>
+          </a>
+        </li>
+        <li><a>Settings</a></li>
+        <li><a>Logout</a></li>
+      </ul>
+    </div>
+  </div>
+</div>
+
+<!-- Open the modal using ID.showModal() method -->
+<button class="btn" onclick="my_modal_1.showModal()">open modal</button>
+<dialog id="my_modal_1" class="modal">
+  <div class="modal-box">
+    <h3 class="text-lg font-bold">Hello!</h3>
+    <p class="py-4">Press ESC key or click the button below to close</p>
+    <div class="modal-action">
+      <form method="dialog">
+        <!-- if there is a button in form, it will close the modal -->
+        <button class="btn">Close</button>
+      </form>
+    </div>
+  </div>
+</dialog>
+
+<input type="checkbox" value="synthwave" class="toggle theme-controller" />
+
+<!-- name of each tab group should be unique -->
+<div class="tabs tabs-border">
+  <input type="radio" name="my_tabs_2" class="tab" aria-label="Tab 1" />
+  <div class="tab-content border-base-300 bg-base-100 p-10">Tab content 1</div>
+
+  <input type="radio" name="my_tabs_2" class="tab" aria-label="Tab 2" checked="checked" />
+  <div class="tab-content border-base-300 bg-base-100 p-10">Tab content 2</div>
+
+  <input type="radio" name="my_tabs_2" class="tab" aria-label="Tab 3" />
+  <div class="tab-content border-base-300 bg-base-100 p-10">Tab content 3</div>
+</div>
+
+<span class="countdown">
+  <span style="--value:59;" aria-live="polite" aria-label="59">42</span>
+</span>
 {% endblock %}
